--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <title>GitHub Members</title>
-<script defer src="/app.55856d49f6b78edc66f3.js"></script></head>
+<script defer src="./app.55856d49f6b78edc66f3.js"></script></head>
 
 <body>
     <div id="root"></div>
